testdata/baselines/reference/submodule/compiler/noImplicitAnyModule.errors.txt
noImplicitAnyModule.ts(4,9): error TS7013: Construct signature, which lacks return-type annotation, implicitly has an 'any' return type.
noImplicitAnyModule.ts(9,18): error TS7006: Parameter 'x' implicitly has an 'any' type.
noImplicitAnyModule.ts(13,17): error TS7010: 'h', which lacks return-type annotation, implicitly has an 'any' return type.


==== noImplicitAnyModule.ts (3 errors) ====
    declare module Module {
        interface Interface {
            // Should return error for implicit any on return type.
            new ();
            ~~~~~~~
!!! error TS7013: Construct signature, which lacks return-type annotation, implicitly has an 'any' return type.
        }
    
        class Class {
            // Should return error for implicit `any` on parameter.
            public f(x): any;
                     ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
            public g(x: any);
    
            // Should not return error at all.
            private h(x);
                    ~
!!! error TS7010: 'h', which lacks return-type annotation, implicitly has an 'any' return type.
        }
    
        // Should return error for implicit any on return type.
        function f(x: number);
    }
    